# legacy-use

./: .dockerignore  .env.template  .envrc  .gitignore  .pre-commit-config.yaml  .sops.yaml  CONTRIBUTING.md  DOCKER-BETA-BUILD.md  HOW_TO_PROMPT.md  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  biome.json  build-docker-beta.sh  build_all_docker.sh  docker-compose.az.yml  docker-compose.dev-override.yml  docker-compose.yml  generate_api_key.py  generate_openapi_schema.py  index.html  mf-deploy-demo.sh  orval.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  session_constraint_implementation.md  start_docker.sh  tsconfig.json  vite.config.js
.cursor/rules/: main.mdc  run-linter-backend.mdc  run-linter-frontend.mdc
.github/: dependabot.yml
.github/workflows/: frontend.yml  lint-and-format.yml  python-tests.yml  python.yml  run-tests.yml
app/: App.jsx  App.tsx  index.jsx  main.tsx
app/cloud/: index.tsx
app/components/: AddApiDialog.jsx  AddApiDialog.tsx  ApiCustomActions.tsx  ApiKeyDialog.jsx  ApiKeyDialog.tsx  ApiList.jsx  ApiList.tsx  AppHeader.jsx  AppHeader.tsx  ContainerLogsModal.tsx  CreateSession.jsx  CreateSession.tsx  CreateTarget.jsx  CreateTarget.tsx  Dashboard.jsx  Dashboard.tsx  DeleteSessionDialog.jsx  DuplicateApiDialog.jsx  DuplicateApiDialog.tsx  EditApiDefinition.jsx  EditApiDefinition.tsx  HttpExchangeViewer.jsx  HttpExchangeViewer.tsx  InteractiveBuilder.tsx  InteractiveSession.tsx  JobDetails.jsx  JobDetails.tsx  JobStatusCard.jsx  JobStatusCard.tsx  JobTabs.jsx  JobTabs.tsx  JobsList.jsx  JobsList.tsx  JobsSection.jsx  JobsSection.tsx  LogViewer.jsx  LogViewer.tsx  OnboardingWizard.jsx  OnboardingWizard.tsx  RecordIcon.tsx  (+28 more)
app/contexts/: AiProviderContext.jsx  AiProviderContext.tsx  ApiKeyContext.jsx  ApiKeyContext.tsx
app/services/: apiService.jsx  apiService.tsx  telemetryService.tsx
app/utils/: apiConstants.ts  formatDuration.tsx  jobStatus.ts  video.tsx
mf/: docker-compose.yml  infra-targets.mk  mf-deploy.sh  post-install.sql  reencrypt-secrets.sh
public/: index.html  manifest.json
sample_prompts/: FailOnPurpose.json  GetWindowTitle.json  WindowsCalc.json
secrets/: azure.env  demo-vm.env
server/: __init__.py  alembic.ini  config.py  core.py  server.py  server_test.py  settings.py  settings_tenant.py  tenant_manager.py
(+152 files in other folders)
