[project]
name = "legacy-use"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.12.0",
    "anthropic[bedrock]>=0.49.0",
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "docker>=7.1.0",
    "fastapi>=0.110.0",
    "google-auth>=2.28.1",
    "google-auth-oauthlib>=1.2.0",
    "google-cloud-aiplatform>=1.42.1",
    "gunicorn>=23.0.0",
    "httpx>=0.27.0",
    "instructor[google-genai]>=1.10.0",
    "jinja2>=3.1.6",
    "posthog>=4.9.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.31.0",
    "scalar-fastapi>=1.2.3",
    "sentry-sdk[fastapi]>=1.40.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.27.1",
    "websockets>=12.0.0",
    "aioboto3>=15.1.0",
    "openapi-schema-validator>=0.6.3",
    "clerk-backend-api>=3.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "pre-commit>=4.2.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pyright>=1.1.403",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
# Add include/exclude settings here if needed in the future

[tool.ruff.lint]
extend-select = ["I"]
